# you_should_not_pass_client

./: .gitignore  Cargo.toml  login.py  main  main.py  you_should_not_pass_client
src/: app.rs  handler.rs  lib.rs  main.rs  tcp.rs  tui.rs  ui.rs
src/ui/: running.rs
