[package]
name = "you_should_not_pass_client"
version = "0.1.0"
authors = ["MYRon <MYRon_TO@outlook.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.26.0"
tokio = { version = "1.35.1", features = ["full"] }
tui-textarea = "0.4.0"
base64 = "0.22.1"
webbrowser = "1.0.1"
